<resources>
    <string name="app_name">Pulse Music</string>
    <string name="toast_requires_storage_access">App needs to access device storage to work</string>
    <string name="notification_playback_channel_name">Music Notification</string>
    <string name="notification_audio_channel_name">Audio Device Detection</string>
    <string name="desc_album_art">Album art image</string>
    <string name="desc_close_btn">Close button</string>
    <string name="desc_action_btn">Action button</string>
    <string name="desc_icon_button">Icon button</string>
    <string name="desc_confirm_btn">Confirm selection</string>
    <string name="desc_play_pause_btn">Media play and pause button</string>
    <string name="desc_options_btn">Context menu button</string>
    <string name="equalizer">Equalizer</string>
    <string name="select_equalizer">Select Equalizer</string>
    <string name="shuffle">Shuffle</string>
    <string name="tracks_not_found">No tracks found</string>
    <string name="unknown">Unknown</string>
    <string name="toast_error_playing_track">Error setting data source, playing next song in queue</string>
    <string name="toast_remember_playlist_disabled">Cannot continue playback, remember playlist is disabled</string>
    <string name="toast_remember_playlist_not_found">No playlist found to resume playback</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="toast_enter_your_name">Please enter your name</string>
    <string name="edit_user_playlist_name">Edit playlist title</string>
    <string name="hint_create_playlist">Enter playlist\'s name</string>
    <string name="add_track_to">Add track to\.\.\.</string>
    <string name="message_no_playlist_found">No playlist found\nClick on add button to create playlist</string>
    <string name="toast_added_to_playlist">Track added to playlist</string>
    <string name="toast_add_to_playlist_failed">Error adding track to playlist</string>
    <string name="yes">Yes</string>
    <string name="set">Set</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="nav_home">Home</string>
    <string name="nav_library">Library</string>
    <string name="nav_albums">Albums</string>
    <string name="nav_artists">Artists</string>
    <string name="nav_playlist">Playlist</string>
    <string name="track_picker">Track picker</string>
    <string name="for_you">For you</string>
    <string name="rediscover">Rediscover</string>
    <string name="new_in_library">New in store</string>
    <string name="top_artist">Top artists</string>
    <string name="top_albums">Top albums</string>
    <string name="played_n_times" formatted="true">Played %d times</string>
    <string name="toast_selected_track_load_failed">Cannot play selected track, load failed</string>
    <string name="welcome">Welcome,</string>
    <string name="def_user_name">User</string>
    <string name="footer_message">Made with \u2665 in India</string>
    <string name="select_image">Select image</string>
    <string name="toast_select_image_error">Error selecting image</string>
    <string name="playlist_play_queue">Playing queue</string>
    <string name="playlist_delete_dialog_title">Are you sure you want to delete this playlist?</string>
    <string name="toast_playlist_deleted_success">Successfully deleted playlist</string>
    <string name="cannot_delete_default_playlist">Cannot remove default playlist</string>
    <string name="context_menu_title">Options</string>
    <string name="toast_invalid_options_group">Invalid menu selected</string>
    <string name="sort_title">Sort</string>
    <string name="sort_by_title">Sort by</string>
    <string name="sort_category_title">Title</string>
    <string name="alphabet_asc">A to Z</string>
    <string name="alphabet_desc">Z to A</string>
    <string name="sort_category_duration">Duration</string>
    <string name="duration_asc">Duration ↑</string>
    <string name="duration_desc">Duration ↓</string>
    <string name="sort_category_date">Date</string>
    <string name="date_added_asc">Date added (oldest first)</string>
    <string name="date_added_desc">Date added (newest first)</string>
    <string name="date_modified_asc">Date modified (oldest first)</string>
    <string name="date_modified_desc">Date modified (newest first)</string>
    <string name="sort_category_track_number">Track number</string>
    <string name="album_track_number_asc">Track number asc</string>
    <string name="album_track_number_desc">Track number desc</string>
    <string name="sort_category_artist">Artist</string>
    <string name="album_artist_asc">Album artist asc</string>
    <string name="album_artist_desc">Album artist desc</string>
    <string name="sort_category_year">Year</string>
    <string name="album_year_asc">Album year (oldest first)</string>
    <string name="album_year_desc">Album year (newest first)</string>
    <string name="create_playlist">Create playlist</string>
    <string name="toast_equalizer_not_found">Cannot find equalizer</string>
    <string name="column_title">Columns</string>
    <string name="column_category_count">Count</string>
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="three">Three</string>
    <string name="four">Four</string>
    <string name="five">Five</string>
    <string name="six">Six</string>
    <string name="remove_duplicates">Remove duplicates</string>
    <string name="play_next">Play Next</string>
    <string name="toast_added_to_play_next">Track added and will be played next</string>
    <string name="add_to_queue">Add to queue</string>
    <string name="toast_added_to_queue">Track added to playing queue</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="remove_from_favorite">Remove from favorite</string>
    <string name="delete_from_device">Delete from device</string>
    <string name="delete">Delete</string>
    <string name="delete_confirmation_dialog_title">Confirm delete</string>
    <string name="delete_confirmation_dialog_desc">Are you sure you want to delete the track from your device?</string>
    <string name="toast_delete_from_device_success">Track deleted from device</string>
    <string name="toast_delete_from_device_failed">Failed to delete track</string>
    <string name="share">Share</string>
    <string name="share_intent">Share track using</string>
    <string name="go_to_album">Go to album</string>
    <string name="go_to_artist">Go to artist</string>
    <string name="track_info">Track info</string>
    <string name="message_empty_playlist">This playlist is empty\nYou can add tracks using the add button</string>
    <string name="track_removed_from_queue">Track removed from queue !!!</string>
    <string name="undo">Undo</string>
    <string name="play">Play</string>
    <string name="add">Add</string>
    <string name="clear_all">Clear all</string>
    <string name="toast_playlist_shuffle_success">Playlist shuffled successfully</string>
    <string name="coming_up_next">Up next</string>
    <string name="current_queue">Current queue</string>
    <string name="favorites">Favorites</string>
    <string name="your_favorites">Your favorites</string>
    <string name="message_empty_favorites">Your favorites is empty\nAdd some tracks to favorites\n\n\u2665</string>
    <string name="recent">Recent</string>
    <string name="recent_playlist_title">Recently played</string>
    <string name="message_empty_recent">No tracks found\n\u2639</string>
    <string name="now_playing">Now Playing</string>
    <string name="toast_added_to_favorites">Track added to favorites</string>
    <string name="toast_cannot_add_to_favorites">Track cannot be added to favorites</string>
    <string name="toast_removed_from_favorites">Track removed from favorites</string>
    <string name="toast_shuffle_mode_enabled">Next track will be shuffled</string>
    <string name="toast_shuffle_mode_disabled">Shuffle mode disabled</string>
    <string name="shuffle_mode_up_next_title">Random</string>
    <string name="playlist_completed">Playlist completed</string>
    <string name="select_folders">Select folders</string>
    <string name="message_empty_folders_list">No media folders found in storage\n\u2639</string>
    <string name="artist_tracks_count">Artist has ● %d albums</string>
    <string name="album_tracks_count">Album contains ● %d tracks</string>
    <string name="suffix_tracks">tracks</string>
    <string name="track_number_info">Disc/Track: %d/%d</string>
    <string name="track">Track</string>
    <string name="file_size">File size</string>
    <string name="file_type">File type</string>
    <string name="bitrate">Bit rate</string>
    <string name="sample_rate">Sample rate</string>
    <string name="channel_count">Number of channels</string>
    <string name="hint_search">Search for artist, tracks or albums\.\.\.</string>
    <string name="message_empty_search_result">Nothing to show</string>
    <string name="settings">Settings</string>
    <string name="restart_app">Restart app</string>
    <string name="restart_app_dialog_desc">Pulse Music needs to restart for changes to take effect</string>
    <string name="restart">Restart</string>
    <string name="do_it_later">Do it later</string>
    <string name="general">General</string>
    <string name="general_desc">Configure basic settings</string>
    <string name="theme">Theme</string>
    <string name="theme_desc">Change the look and feel of the app</string>
    <string name="now_playing_title">Now playing</string>
    <string name="now_playing_desc">Customize now playing screen</string>
    <string name="audio">Audio</string>
    <string name="audio_desc">Change audio settings</string>
    <string name="widgets">Widgets</string>
    <string name="widgets_desc">Customize widgets and actions</string>
    <string name="contributors">Contributors</string>
    <string name="contributors_desc">Meet the developers</string>
    <string name="support_development">Support development</string>
    <string name="support_development_desc">Donate a small amount to support the developers</string>
    <string name="about">About</string>
    <string name="about_desc">Everything about this app</string>
    <string name="category_loader">Loader</string>
    <string name="ignored_folder_title">Select ignored folders</string>
    <string name="ignored_folder_desc">Add or remove folders to exclude tracks from showing in library</string>
    <string name="ignored_folder_picker_title">Select folders</string>
    <string name="ignored_folder_picker_empty_text">Ignored list is empty</string>
    <string name="toast_folder_added_to_ignored_list">Successfully added folder to ignored list</string>
    <string name="toast_failed_to_add_folder">Failed to add folder to ignored list</string>
    <string name="toast_removed_folder_from_ignored_list">Folder removed from ignored list</string>
    <string name="ignored_folder_enter_path_title">Ignored folder path</string>
    <string name="hint_ignored_folder_enter_path">Enter folder path</string>
    <string name="duration_filter_title">Duration filter</string>
    <string name="duration_filter_desc">Filter tracks based on track duration</string>
    <string name="duration_filter_unit">sec</string>
    <string name="category_others">Others</string>
    <string name="remember_playlist_title">Remember playlist</string>
    <string name="remember_playlist_desc">Playlist will be remembered, enables you to continue where you left</string>
    <string name="edit_playlist_sections_title">Edit playlist section</string>
    <string name="edit_playlist_section_desc">Select which playlist\'s to show in the home screen</string>
    <string name="playlist_section_selector_title">Toggle playlist section</string>
    <string name="default_tab_title">Select default tab</string>
</resources>